# libcoffee

./: CMakeLists.txt  LICENSE
coffee/: coffee.cpp  coffee.hpp  coffeecontext.cpp  coffeecontext.hpp  coffeestack.cpp  coffeestack.hpp  coffeetypes.cpp  coffeetypes.hpp
test/: test_lib.cpp
